@@ -6,8 +6,11 @@ import S05T2N1RoyoTerolMarina.model.dto.GameDTO;
 import S05T2N1RoyoTerolMarina.model.dto.PlayerDTO;
 import S05T2N1RoyoTerolMarina.model.exception.NoContentFoundException;
 import S05T2N1RoyoTerolMarina.model.exception.PlayerNotFoundException;
+import S05T2N1RoyoTerolMarina.model.exception.UnexpectedErrorException;
 import S05T2N1RoyoTerolMarina.model.repository.GamesRepository;
 import S05T2N1RoyoTerolMarina.model.repository.PlayersRepository;
+import S05T2N1RoyoTerolMarina.model.service.utils.GameUtils;
+import org.bson.types.ObjectId;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -16,7 +19,7 @@ import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
-public class GameServiceImplImpl implements GameService{
+public class GameServiceImplImpl implements GameService, GameUtils {
 
     @Autowired
     private ModelMapper modelMapper;
@@ -32,23 +35,28 @@ public class GameServiceImplImpl implements GameService{
 
     //region SERVICE
 
-    @Override // FALTARIA DATA REGISTRE !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+    @Override
     public PlayerDTO createPlayer(PlayerDTO playerDTO) {
         Player playerRequest;
         PlayerDTO playerDtoResponse;
 
-        playerRequest = playerConvertEntity(playerDTO);
-        playerRequest.setName(setPlayersName(playerRequest));
+        try {
+            playerRequest = playerConvertEntity(playerDTO);
+            playerRequest.setName(setPlayersName(playerRequest));
 
-        if (playerRequest.getName().equalsIgnoreCase("")) {
-            return null;
-        } else {
-            playersRepository.save(playerRequest);
-            playerDtoResponse = playerConvertDTO(playerRequest);
-            playerDtoResponse.setSuccessRate(calculateRate(playerDtoResponse));
+            if (playerRequest.getName().equalsIgnoreCase("")) {
+                return null;
+            } else {
+                playersRepository.save(playerRequest);
+                playerDtoResponse = playerConvertDTO(playerRequest);
+                playerDtoResponse.setSuccessRate(calculateRate(playerDtoResponse));
 
-            return playerDtoResponse;
+                return playerDtoResponse;
+            }
+        } catch (UnexpectedErrorException e) {
+            throw new UnexpectedErrorException("Unexpected error!");
         }
+
     }
 
     @Override
@@ -57,73 +65,57 @@ public class GameServiceImplImpl implements GameService{
         Game game = null;
 
         try {
-            if (playersRepository.existsById(id)){
-                Optional<Player> playerData = playersRepository.findById(id);
-                playerRequest = playerData.get();
-                game = new Game(playerRequest);
-                gamesRepository.save(game);
-            }
+            playerRequest = getOptionalPlayer(id);
+            game = new Game(playerRequest);
+            gamesRepository.save(game);
 
             return gameConvertDTO(game);
 
-        } catch (PlayerNotFoundException e) {
-            throw new PlayerNotFoundException("Player", id);
+        } catch (UnexpectedErrorException e) {
+            throw new UnexpectedErrorException("Unexpected error!");
         }
 
     }
 
     @Override
     public List<String> getAllPlayers() {
-        List<Player> playersList;
         List<String> returnList;
 
         try {
-            playersList = playersRepository.findAll().stream().toList();
-
-            if (gamesRepository.findAll().isEmpty()){
+            if (playersRepository.findAll().isEmpty()) {
                 returnList = null;
             } else {
                 returnList = new ArrayList<>();
-                for (Player player : playersList) {
+                for (Player player : playersRepository.findAll().stream().toList()) {
                     returnList.add(player.toString());
                 }
             }
 
             return returnList;
 
-        } catch (NoContentFoundException e) {
-            throw new NoContentFoundException("Unable to access players repository");
+        } catch (UnexpectedErrorException e) {
+            throw new UnexpectedErrorException("Unexpected error!");
         }
 
     }
 
     @Override
     public List<GameDTO> getGamesPlayerId(Long id) {
-        Player playerRequest;
-        List<GameDTO> gamesList;
-
+        List<GameDTO> gamesList = null;
         try {
-            if (playersRepository.existsById(id)) {
-                if (gamesRepository.findAll().stream().noneMatch(game -> game.getPlayer().getId() == id)) {
-                    gamesList = null;
-                } else {
-                    Optional<Player> playerData = playersRepository.findById(id);
-                    playerRequest = playerData.get();
 
-                    gamesList = gamesRepository.findAll().stream()
-                            .filter(game -> Objects.equals(game.getPlayer().getId(), playerRequest.getId()))
-                            .toList()
-                            .stream().map(this::gameConvertDTO)
-                            .collect(Collectors.toList());
-                }
-            } else {
-                gamesList = new ArrayList<>();
+            if (gamesRepository.findAll().stream().anyMatch(game -> game.getPlayer().getId() == id)) {
+                gamesList = gamesRepository.findAll().stream()
+                        .filter(game -> Objects.equals(game.getPlayer().getId(), id))
+                        .toList()
+                        .stream().map(this::gameConvertDTO)
+                        .collect(Collectors.toList());
             }
 
             return gamesList;
 
-        } catch (PlayerNotFoundException e) {
-            throw new PlayerNotFoundException("Player", id);
+        } catch (UnexpectedErrorException e) {
+            throw new UnexpectedErrorException("Unexpected error!");
         }
     }
 
@@ -133,20 +125,16 @@ public class GameServiceImplImpl implements GameService{
 
         try {
             if (!gamesRepository.findAll().isEmpty()){
-                double average = gamesRepository.findAll().stream()
-                        .mapToDouble(game -> game.getStatus().equals("WINNER") ? 1 : 0)
-                        .average()
-                        .orElse(0.0) * 100.0;
+                output = getRateFromList(gamesRepository.findAll().stream().toList());
 
-                output = String.format("%.2f", average);
             } else {
                 output = "";
             }
 
             return output;
 
-        } catch (NoContentFoundException e) {
-            throw new NoContentFoundException("Unable to access games repository");
+        } catch (UnexpectedErrorException e) {
+            throw new UnexpectedErrorException("Unexpected error!");
         }
     }
 
@@ -182,25 +170,18 @@ public class GameServiceImplImpl implements GameService{
         PlayerDTO playerDtoResponse;
 
         try {
-            if (playersRepository.existsById(id)) {
-                Optional<Player> playerData = playersRepository.findById(id);
-                playerRequest = playerData.get();
-                playerRequest.setName(playerDTO.getName());
-                playersRepository.save(playerRequest);
+            playerRequest = getOptionalPlayer(id);
+            playerRequest.setName(playerDTO.getName());
+            playersRepository.save(playerRequest);
 
-                playerDtoResponse = playerConvertDTO(playerRequest);
-                playerDtoResponse.setSuccessRate(calculateRate(playerDtoResponse));
-            } else {
-                playerDtoResponse = null;
-            }
+            playerDtoResponse = playerConvertDTO(playerRequest);
+            playerDtoResponse.setSuccessRate(calculateRate(playerDtoResponse));
 
             return playerDtoResponse;
 
-        } catch (PlayerNotFoundException e) {
-            throw new PlayerNotFoundException("Player", id);
+        } catch (UnexpectedErrorException e) {
+            throw new UnexpectedErrorException("Unexpected error!");
         }
-
-
     }
 
     @Override
@@ -208,7 +189,7 @@ public class GameServiceImplImpl implements GameService{
         int found = 0;
 
         try {
-            if (playersRepository.existsById(id)){
+            if (playerExistById(id)) {
                 if (gamesRepository.findAll().stream().anyMatch(game -> Objects.equals(game.getPlayer().getId(), id))){
                     gamesRepository.findAll().stream()
                             .filter(game -> Objects.equals(game.getPlayer().getId(), id))
@@ -219,12 +200,19 @@ public class GameServiceImplImpl implements GameService{
                     found = 1;
                 }
             }
-        } catch (Exception e){
-            throw new PlayerNotFoundException("Player", id);
+        } catch (UnexpectedErrorException e) {
+            throw new UnexpectedErrorException("Unexpected error!");
         }
 
         return found;
 
+
+    }
+
+    @Override
+    public boolean playerExistById(Long id) {
+
+        return playersRepository.existsById(id);
 
     }
 
@@ -234,21 +222,31 @@ public class GameServiceImplImpl implements GameService{
 
 
 
-    //region USEFUL
+    //region UTILS
 
+    @Override
+    public Player getOptionalPlayer(Long id) {
+        Optional<Player> playerData = playersRepository.findById(id);
+        return playerData.get();
+    }
+
+    @Override
     public PlayerDTO playerConvertDTO(Player player){
         return modelMapper.map(player, PlayerDTO.class);
     }
 
+    @Override
     public Player playerConvertEntity(PlayerDTO playerDTO){
         return modelMapper.map(playerDTO, Player.class);
     }
 
+    @Override
     public GameDTO gameConvertDTO(Game game){
         return modelMapper.map(game, GameDTO.class);
     }
 
-    private List<PlayerDTO> getSuccessRatePlayers() {
+    @Override
+    public List<PlayerDTO> getSuccessRatePlayers() {
         List<PlayerDTO> playerDTOList;
 
         try {
@@ -260,34 +258,44 @@ public class GameServiceImplImpl implements GameService{
 
             return playerDTOList;
 
-        } catch (NoContentFoundException e) {
-            throw new NoContentFoundException("Unable to access players repository");
+        } catch (UnexpectedErrorException e) {
+            throw new UnexpectedErrorException("Unexpected error!");
         }
-
-
     }
 
+    @Override
     public String calculateRate(PlayerDTO playerDTO) {
+
+        String output;
 
         try {
             if (gamesRepository.findAll().stream().anyMatch(game -> game.getPlayer().getId() == playerDTO.getId())) {
-                double result = gamesRepository.findAll().stream()
-                        .filter(game -> game.getPlayer().getId() == playerDTO.getId())
-                        .toList().stream()
-                        .mapToDouble(game -> game.getStatus().equals("WINNER") ? 1 : 0)
-                        .average()
-                        .orElse(0.0) * 100;
 
-                return String.format(String.valueOf(result), result);
+                output = getRateFromList(gamesRepository.findAll().stream().filter(game -> game.getPlayer().getId() == playerDTO.getId()).toList());
+
             } else {
-                return "Still haven't played any game.";
+                output = "Still haven't played any game.";
             }
-        } catch (NoContentFoundException e) {
-            throw new NoContentFoundException("Unable to access games repository");
+
+            return output;
+        } catch (UnexpectedErrorException e) {
+            throw new UnexpectedErrorException("Unexpected error!");
         }
+    }
+
+    @Override
+    public String getRateFromList(List<Game> gameList) {
+
+        double result = gameList.stream()
+                .mapToDouble(game -> game.getStatus().equals("WINNER") ? 1 : 0)
+                .average()
+                .orElse(0.0) * 100;
+
+        return String.format("%.2f%%", result);
 
     }
 
+    @Override
     public String setPlayersName(Player player){
         String playerName;
 
@@ -304,11 +312,12 @@ public class GameServiceImplImpl implements GameService{
         return playerName;
     }
 
+    @Override
     public boolean checkString(String stringName){
 
         return playersRepository.findAll().stream().anyMatch(player -> player.getName().equalsIgnoreCase(stringName));
 
     }
 
-    //endregion USEFUL
+    //endregion UTILS
 }
